<resources>
    <string name="app_name">DRAC MAP</string>
    <string name="action_settings">Settings</string>
    <string name="activation">Put enter your Activation Key</string>
    <string name="lable_activation">Activate</string>
    <string name="warning">Warning</string>
    <string name="message">Message</string>
    <string name="info">info</string>
    <string name="error">Error</string>
    <string name="submit">Submit</string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="longitude">Longitude</string>
    <string name="getLocation">Get Location</string>
    <string name="latitude">Latitude</string>
    <string name="num_shutters">Number of Shutters</string>
    <string name="num_of_floors">Number of floors</string>
</resources>
